testsuite/tests/profiling/should_fail/all.T

test('proffail001', normal, compile_fail, ['-prof -fprof-cafs'])
test('T17916', normal, compile_fail, [''])

